--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<script type="text/javascript" src="paper.js"></script>
     <script type="text/javascript" src="ball.js"></script>
   <!--  <script type="text/javascript" src="vector.js"></script> -->
+
+    <script type="text/javascript" src="http://localhost:8080/nowjs/now.js"></script>
+
 	<script type="text/paperscript" canvas="canvas">
 		var width, height, center;
 		var points = 4;
@@ -43,6 +46,10 @@
 
 		initializePath();
        // addTanks();
+  now.ready(function(){
+    // "Hello World!" will print on server
+    now.logStuff("Hello World!");
+  });
 
 		function initializePath() {
 
