--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>Smoothing</title>
 	<!-- <link rel="stylesheet" href="style.css"> -->
 	<script type="text/javascript" src="paper.js"></script>
- <!--    <script type="text/javascript" src="ball.js"></script>
-   <script type="text/javascript" src="vector.js"></script> -->
+    <script type="text/javascript" src="jquery-1.6.2.min.js"></script>
+    <script type="text/javascript" src="tank.js"></script> 
 
     <script type="text/javascript" src="http://localhost:8080/nowjs/now.js"></script>
 
@@ -42,11 +42,19 @@
 	////////////////////////////////////////////////////////////////////////////////
 	// Vector
 
-//	var vectorStart, vector, vectorPrevious;
-	var vectorItem, items, dashedItems;
 
 	var currentLogin;	
-       // addTanks();
+
+    $(document).ready(function(){
+        initializePath();
+        var t = new Tank();
+        var a = new Point({"x":50, "y":50 });
+        var b = new Point({"x":60, "y":60 });
+        t.processVector(a, b);
+    });
+
+
+/*       // addTanks();
     now.ready(function(){
         // "Hello World!" will print on server
         currentLogin =  "_"+Math.random()*100;
@@ -68,12 +76,8 @@
     now.receive = function(name, message)
     {
 
-/*
-      //залогинился другой игрок
-      if (message.name==="login" && message.title !== currentLogin )
-      {
-            
-      }*/
+
+
       //залогинился я
 
       if (message.type==="login")
@@ -96,7 +100,7 @@ console.log( now.players  );
             processVector(vectorStart, ev, false);
         }
    }
-
+*/
    function initializePath() {
 
 			center = view.center;
@@ -179,145 +183,7 @@ console.log( now.players  );
 		}
 
 
-	function processVector(vectorStart, event, drag) {
-		vector = event.point - vectorStart;
-/*
-		if (vectorPrevious) {
-			if (values.fixLength && values.fixAngle) {
-				vector = vectorPrevious;
-			} else if (values.fixLength) {
-				vector.length = vectorPrevious.length;
-			} else if (values.fixAngle) {
-				vector = vector.project(vectorPrevious);
-			}
-		}
-        */
-		drawVector(vectorStart, vector, drag);
-	}
 
-	function drawVector(vectorStart, vector, drag) {
-		if (items) {
-			for (var i = 0, l = items.length; i < l; i++) {
-				items[i].remove();
-			}
-		}
-		if (vectorItem)
-			vectorItem.remove();
-		items = [];
-
-		var arrowVector = vector.normalize(10);
-
-		var end = vectorStart + vector;
-
-		vectorItem = new Group([
-			new Path([vectorStart, end]),
-			new Path([
-				end + arrowVector.rotate(135),
-				end,
-				end + arrowVector.rotate(-135)
-			])
-		]);
-
-
-		vectorItem.strokeWidth = 0.75;
-		vectorItem.strokeColor = '#e4141b';
-
-
-		// Display:
-		dashedItems = [];
-		// Draw Circle
-		if (values.showCircle) {
-			dashedItems.push(new Path.Circle(vectorStart, vector.length));
-		}
-
-		// Draw Labels
-		if (values.showAngleLength) {
-			drawAngle(vectorStart, vector, !drag);
-			if (!drag)
-				drawLength(vectorStart, end, vector.angle < 0 ? -1 : 1, true);
-		}
-		var quadrant = vector.quadrant;
-		if (values.showCoordinates && !drag) {
-			drawLength(vectorStart, vectorStart + [vector.x, 0],
-					[1, 3].indexOf(quadrant) != -1 ? -1 : 1, true, vector.x, 'x: ');
-			drawLength(vectorStart, vectorStart + [0, vector.y],
-					[1, 3].indexOf(quadrant) != -1 ? 1 : -1, true, vector.y, 'y: ');
-		}
-		for (var i = 0, l = dashedItems.length; i < l; i++) {
-			var item = dashedItems[i];
-			item.strokeColor = 'black';
-			item.dashArray = [1, 2];
-			items.push(item);
-		}
-		// Update palette
-		values.x = vector.x;
-		values.y = vector.y;
-		values.length = vector.length;
-		values.angle = vector.angle;
-	}
-
-	function drawAngle(center, vector, label) {
-		var radius = 25, threshold = 10;
-		if (vector.length < radius + threshold || Math.abs(vector.angle) < 15)
-			return;
-		var from = new Point(radius, 0);
-		var through = from.rotate(vector.angle / 2);
-		var to = from.rotate(vector.angle);
-		var end = center + to;
-		dashedItems.push(new Path.Line(center,
-				center + new Point(radius + threshold, 0)));
-		dashedItems.push(new Path.Arc(center + from, center + through, end));
-		var arrowVector = to.normalize(7.5).rotate(vector.angle < 0 ? -90 : 90);
-		dashedItems.push(new Path([
-				end + arrowVector.rotate(135),
-				end,
-				end + arrowVector.rotate(-135)
-		]));
-		if (label) {
-			// Angle Label
-			var text = new PointText(center
-					+ through.normalize(radius + 10) + new Point(0, 3));
-			text.content = Math.floor(vector.angle * 100) / 100 + '\xb0';
-			items.push(text);
-		}
-	}
-
-	function drawLength(from, to, sign, label, value, prefix) {
-		var lengthSize = 5;
-		if ((to - from).length < lengthSize * 4)
-			return;
-		var vector = to - from;
-		var awayVector = vector.normalize(lengthSize).rotate(90 * sign);
-		var upVector = vector.normalize(lengthSize).rotate(45 * sign);
-		var downVector = upVector.rotate(-90 * sign);
-		var lengthVector = vector.normalize(
-				vector.length / 2 - lengthSize * Math.sqrt(2));
-		var line = new Path();
-		line.add(from + awayVector);
-		line.lineBy(upVector);
-		line.lineBy(lengthVector);
-		line.lineBy(upVector);
-		var middle = line.lastSegment.point;
-		line.lineBy(downVector);
-		line.lineBy(lengthVector);
-		line.lineBy(downVector);
-		dashedItems.push(line);
-		if (label) {
-			// Length Label
-			var textAngle = Math.abs(vector.angle) > 90
-					? textAngle = 180 + vector.angle : vector.angle;
-			// Label needs to move away by different amounts based on the
-			// vector's quadrant:
-			var away = (sign >= 0 ? [1, 4] : [2, 3]).indexOf(vector.quadrant) != -1
-					? 8 : 0;
-			var text = new PointText(middle + awayVector.normalize(away + lengthSize));
-			text.rotate(textAngle);
-			text.justification = 'center';
-			value = value || vector.length;
-			text.content = (prefix || '') + Math.floor(value * 1000) / 1000;
-			items.push(text);
-		}
-	}
 	////////////////////////////////////////////////////////////////////////////////
 	// Mouse Handling
 
